# pytest-simbind

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: tests.yaml
pytest_simbind/: DataSink.py  SimbindCollector.py  SimbindCollectorPlugin.py  SimbindCorePlugin.py  TestLogHandler.py  __init__.py  fixture.py  plugin.py
pytest_simbind/dto/: FailDetailsDto.py  LogMessageDto.py  TestCaseInfoDto.py  TestDataRecordDto.py  TestStatusDto.py  TestUpdateDto.py  __init__.py
tests/api/: api_data_stream_test.py
tests/assets/: model-6.3+mock-py3-none-any.whl  model-6.3-py3-none-linux_x86_64.whl
tests/assets/example_tests/: conftest.py
tests/assets/example_tests/package1/: module_1_1_test.py
tests/assets/example_tests/package2/: module_2_1_test.py
tests/assets/example_tests/package2/package21/: module_21_1_test.py
tests/cli/: api_selector_test.py  cli_test.py  conftest.py
